test_regress/t/t_sequence_sexpr_unsup.out
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:88:26: Unsupported: sequence argument data type
   88 |   sequence p_arg_seqence(sequence inseq);
      |                          ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:96:5: Unsupported: first_match with sequence_match_items
   96 |     first_match (a, res0 = 1);
      |     ^~~~~~~~~~~
%Error-UNSUPPORTED: t/t_sequence_sexpr_unsup.v:99:5: Unsupported: first_match with sequence_match_items
   99 |     first_match (a, res0 = 1, res1 = 2);
      |     ^~~~~~~~~~~
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:102:9: Ignoring unsupported: cover sequence
  102 |   cover sequence (s_a) $display("");
      |         ^~~~~~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:103:9: Ignoring unsupported: cover sequence
  103 |   cover sequence (@(posedge a) disable iff (b) s_a) $display("");
      |         ^~~~~~~~
%Warning-COVERIGN: t/t_sequence_sexpr_unsup.v:104:9: Ignoring unsupported: cover sequence
  104 |   cover sequence (disable iff (b) s_a) $display("");
      |         ^~~~~~~~
%Error: Exiting due to
